provide complete Platform for referrence in upper level usage, such as APE